--- a/index.html
+++ b/index.html
@@ -45,10 +45,28 @@
             width: 200%;
             height: 200%;
             background:
-                radial-gradient(circle at 30% -10%, rgba(135, 206, 235, 0.15), transparent 50%),
-                radial-gradient(circle at 70% -5%, rgba(173, 216, 230, 0.1), transparent 45%);
+                radial-gradient(circle at 30% -10%, rgba(135, 206, 235, 0.08), transparent 50%),
+                radial-gradient(circle at 70% -5%, rgba(173, 216, 230, 0.05), transparent 45%);
             animation: moveLight 15s infinite alternate ease-in-out;
             pointer-events: none;
+        }
+
+        /* Versión más oscura para móviles */
+        @media (max-width: 768px) {
+            body {
+                background: linear-gradient(to bottom,
+                        #000a0d 0%,
+                        #001a2e 30%,
+                        #002d52 60%,
+                        #003d7a 85%,
+                        #004fa3 100%) !important;
+            }
+
+            body::after {
+                background:
+                    radial-gradient(circle at 30% -10%, rgba(135, 206, 235, 0.03), transparent 50%),
+                    radial-gradient(circle at 70% -5%, rgba(173, 216, 230, 0.02), transparent 45%);
+            }
         }
 
         @keyframes moveLight {
@@ -81,6 +99,16 @@
             visibility: hidden;
             z-index: 10;
             transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        }
+
+        /* Mayor opacidad en móviles */
+        @media (max-width: 768px) {
+            .container {
+                background: rgba(0, 0, 0, 0.6);
+                border: 2px solid rgba(255, 255, 255, 0.25);
+                box-shadow: 0 8px 32px rgba(0, 0, 0, 0.8);
+                backdrop-filter: blur(20px);
+            }
         }
 
         .container.show {
@@ -168,6 +196,22 @@
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
             opacity: 0;
             animation: fadeIn 2s forwards;
+        }
+
+        /* Mayor contraste en móviles */
+        @media (max-width: 768px) {
+            .show-message-btn {
+                background: rgba(0, 0, 0, 0.5);
+                border: 2px solid rgba(255, 255, 255, 0.5);
+                box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
+                padding: 16px 36px;
+                font-size: 1rem;
+            }
+
+            .show-message-btn:hover {
+                background: rgba(0, 0, 0, 0.7);
+                border-color: rgba(255, 255, 255, 0.7);
+            }
         }
 
         .show-message-btn:hover {
