Mejorar gradientes del mar en móviles

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
             pointer-events: none;
         }
 
-        /* Versión más oscura para móviles */
+        /* Versión mejorada para móviles */
         @media (max-width: 768px) {
             body {
                 background: linear-gradient(to bottom,
-                        #000a0d 0%,
-                        #001a2e 30%,
-                        #002d52 60%,
-                        #003d7a 85%,
-                        #004fa3 100%) !important;
+                        #000814 0%,
+                        #002041 25%,
+                        #003d7a 50%,
+                        #0066b3 75%,
+                        #0088d4 100%) !important;
             }
 
             body::after {
                 background:
-                    radial-gradient(circle at 30% -10%, rgba(135, 206, 235, 0.03), transparent 50%),
-                    radial-gradient(circle at 70% -5%, rgba(173, 216, 230, 0.02), transparent 45%);
+                    radial-gradient(circle at 30% -10%, rgba(135, 206, 235, 0.12), transparent 50%),
+                    radial-gradient(circle at 70% -5%, rgba(173, 216, 230, 0.08), transparent 45%);
             }
         }
 
