--- a/index.html
+++ b/index.html
@@ -13,20 +13,10 @@
             box-sizing: border-box;
         }
 
-        html {
-            overflow: hidden;
-            height: 100%;
-            width: 100%;
-            position: fixed;
-        }
-
         body {
-            height: 100vh;
-            height: 100dvh;
-            /* Usa altura de viewport dinámica en móviles */
+            min-height: 100vh;
             width: 100%;
-            overflow: hidden;
-            position: fixed;
+            overflow-x: hidden;
             font-family: 'Segoe UI', sans-serif;
             background: linear-gradient(to bottom,
                     #001219 0%,
@@ -34,9 +24,8 @@
                     #006494 60%,
                     #0582ca 85%,
                     #00a6fb 100%);
-            -webkit-overflow-scrolling: touch;
-            overscroll-behavior: none;
         }
+
 
         /* Luz suave en el mar */
         body::after {
@@ -296,7 +285,7 @@
 
         /* Burbujas */
         .bubble {
-            position: absolute;
+            position:  fixed;
             bottom: -100px;
             background: radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.1));
             border-radius: 50%;
