--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p id="dailyNoteText"></p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2"></script>
 
 </body>
 
