--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <h1 id="title"></h1>
         <div class="name" id="name"></div>
         <p id="message"></p>
+        <div id="waterAlertInModal" class="water-alert-in-modal">
+            <span id="waterAlertTextInModal" class="water-alert-text-in-modal"></span>
+        </div>
     </div>
 
     <!-- Modal nota del día -->
